...
                                                </connections>
                                            </textField>
                                            <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eOd-5f-I4h" userLabel="line1">
                                                <rect key="frame" x="0.0" y="38" width="540" height="1"/>
                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </view>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="Email" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Cgj-Ta-yiV">
                                                <rect key="frame" x="0.0" y="39" width="540" height="38"/>
                                                <accessibility key="accessibilityConfiguration" hint="Email" identifier="Email" label="Email"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next"/>
                                                <connections>
                                                    <outlet property="delegate" destination="WSL-MD-8lC" id="2xS-6b-QfH"/>
...
                                                </connections>
                                            </button>
                                            <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zYJ-q0-ZOd" userLabel="line3">
                                                <rect key="frame" x="0.0" y="116" width="540" height="1"/>
                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </view>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="Password" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password (characters at length 6 to 20)" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="SWw-e
                                                <rect key="frame" x="0.0" y="117" width="540" height="38"/>
                                                <accessibility key="accessibilityConfiguration" hint="Password" identifier="Password" label="Password"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" returnKeyType="next" secureTextEntry="YES"/>
                                                <connections>
                                                    <outlet property="delegate" destination="WSL-MD-8lC" id="CgY-Hn-vG1"/>
...
                                        </connections>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vrP-85-DQA">
                                        <rect key="frame" x="20" y="273" width="560" height="32"/>
                                        <color key="backgroundColor" red="0.43921568630000002" green="0.43529411759999997" blue="0.98823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                        <state key="normal" title="OK">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <real key="value" value="2"/>
                                            </userDefinedRuntimeAttribute>
...
