...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RkZ-cl-143">
                                        <rect key="frame" x="392.5" y="9" width="197.5" height="33"/>
                                        <color key="backgroundColor" red="0.43921568630000002" green="0.43529411759999997" blue="0.98823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                        <state key="normal" title="Continue">
                                            <color key="titleColor" red="0.95474759620000005" green="0.95474759620000005" blue="0.95474759620000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <real key="value" value="2"/>
                                            </userDefinedRuntimeAttribute>
...
                                        <rect key="frame" x="392.5" y="16" width="197.5" height="33"/>
                                        <color key="backgroundColor" red="0.43921568630000002" green="0.43529411759999997" blue="0.98823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="33" id="pUp-Iz-REp"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                        <state key="normal" title="Place Order">
                                            <color key="titleColor" red="0.95474759620000005" green="0.95474759620000005" blue="0.95474759620000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <real key="value" value="2"/>
                                            </userDefinedRuntimeAttribute>
...
                                            <action selector="clickedPayAgainButton:" destination="xm0-3t-cVO" eventType="touchUpInside" id="ozE-qM-7dK"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cf2-tE-Ah2">
                                        <rect key="frame" x="200" y="308.5" width="200" height="40"/>
                                        <color key="backgroundColor" red="0.43921568630000002" green="0.43529411759999997" blue="0.98823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="View Order">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <real key="value" value="2"/>
                                            </userDefinedRuntimeAttribute>
...
